Add maintainer to the dockerfiles

--- a/docker/ubuntu/14-04/clues-plugins-base/Dockerfile
+++ b/docker/ubuntu/14-04/clues-plugins-base/Dockerfile
@@ -1,6 +1,6 @@
-# Dockerfile to create a base container for the IM service
 FROM grycap/jenkins:ubuntu14.04-git-base
 LABEL description="Base container image to run python tests."
+MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 
 # Update and install all the neccesary packages
 RUN apt-get update && apt-get install -y \
