--- a/docker/ubuntu/14-04/im-base/Dockerfile
+++ b/docker/ubuntu/14-04/im-base/Dockerfile
@@ -1,6 +1,6 @@
-# Dockerfile to create a base container for the IM service
 FROM ubuntu:14.04
 LABEL description="base container image to run the IM service. (http://www.grycap.upv.es/im)"
+MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 
 # Update and install all the neccesary packages
 RUN apt-get update && apt-get install -y \
