--- a/docker/ubuntu/14-04/git-base/Dockerfile
+++ b/docker/ubuntu/14-04/git-base/Dockerfile
@@ -9,8 +9,8 @@ RUN apt-get update && apt-get install -y \
  && rm -rf /var/lib/apt/lists/*
 
 # Add jenkins user/group  
-RUN groupadd -g 112 devel \
- && useradd -u 105 -g 112 jenkins
+RUN groupadd -g 1001 jenkins \
+ && useradd -m -d /home/jenkins -s /bin/bash -g jenkins -u 1001 jenkins
 
 RUN adduser jenkins sudo
 
