Refactorization of the dockerfiles

--- a/docker/centos/7/base/Dockerfile
+++ b/docker/centos/7/base/Dockerfile
@@ -1,16 +1,13 @@
-FROM centos:6
-LABEL description="Base container image with git and Jenkins user."
+FROM centos:7
+LABEL description="Base container image with the jenkins user configured"
 MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 
-# Update and install all the neccesary packages
-RUN yum -y update \
+# Update and install all the necessary packages
+RUN yum -y update && yum install -y \
+    sudo \
  && yum clean all
 
-RUN yum -y install git \
- && yum -y install sudo \
- && yum clean all
-
-# Add jenkins user/group  
+# Add jenkins user/group
 RUN groupadd -g 1001 jenkins \
 && useradd -m -d /home/jenkins -s /bin/bash -g jenkins -u 1001 jenkins
 
