--- a/docker/ubuntu/14-04/base/Dockerfile
+++ b/docker/ubuntu/14-04/base/Dockerfile
@@ -1,14 +1,8 @@
 FROM ubuntu:14.04
-LABEL description="Base container image with git and Jenkins user."
+LABEL description="Base container image with the jenkins user configured"
 MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 
-# Update and install all the neccesary packages
-RUN apt-get update && apt-get install -y \
-    git \
- && apt-get clean \
- && rm -rf /var/lib/apt/lists/*
-
-# Add jenkins user/group  
+# Add jenkins user/group
 RUN groupadd -g 1001 jenkins \
  && useradd -m -d /home/jenkins -s /bin/bash -g jenkins -u 1001 jenkins
 
@@ -17,4 +11,4 @@ RUN adduser jenkins sudo
 # Enable passwordless sudo for users under the "sudo" group
 RUN sed -i.bkp -e \
       's/%sudo\s\+ALL=(ALL\(:ALL\)\?)\s\+ALL/%sudo ALL=NOPASSWD:ALL/g' \
-      /etc/sudoers
+/etc/sudoers
