Add java8 base image

--- a/docker/ubuntu/14-04/java8/Dockerfile
+++ b/docker/ubuntu/14-04/java8/Dockerfile
@@ -1,6 +1,13 @@
-FROM grycap/jenkins:ubuntu14.04-java8
+FROM grycap/jenkins:ubuntu14.04-base
 LABEL description="Container with latest version of Maven and Java 8"
 MAINTAINER Alfonso Pérez (alpegon3@upv.es)
+
+# Update and install all the necessary packages
+RUN apt-get update && apt-get install -y \
+    software-properties-common \
+    git \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/*
 
 # Install Java 8
 RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | debconf-set-selections \
@@ -10,10 +17,3 @@ RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true 
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/* \
  && rm -rf /var/cache/oracle-jdk8-installer
-
-# Update and install all the necessary packages
-RUN apt-get update && apt-get install -y \
-    git \
-    maven \
- && apt-get clean \
- && rm -rf /var/lib/apt/lists/*
