--- a/docker/centos/7/base/Dockerfile
+++ b/docker/centos/7/base/Dockerfile
@@ -15,3 +15,6 @@ RUN gpasswd -a jenkins wheel
 
 # Enable passwordless sudo for users under the "wheel" group
 RUN sed -i.bkp -e 's/#\s%wheel.*NOPASSWD.*/%wheel ALL=(ALL) NOPASSWD: ALL/g' /etc/sudoers
+
+# Fix issue: 'sudo: sorry, you must have a tty to run sudo'
+RUN sed -i.bkp -e 's/Defaults.*requiretty.*/# Defaults requiretty/g' /etc/sudoers
