Add python tox package to ubuntu python image

--- a/docker/ubuntu/14-04/python/Dockerfile
+++ b/docker/ubuntu/14-04/python/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     python-nose \
     python-mock \
     python-ply \
-    python-coverage \        
+    python-tox \
+    python-coverage \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
