Update libraries used in tosca image

--- a/docker/ubuntu/14-04/tosca/Dockerfile
+++ b/docker/ubuntu/14-04/tosca/Dockerfile
@@ -5,5 +5,7 @@ MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 # Update and install all the necessary packages
 RUN apt-get update && apt-get install -y \
     python-pbr \
+    python-yaml \
+    python-dateutil \    
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
