--- a/docker/ubuntu/14-04/tosca/Dockerfile
+++ b/docker/ubuntu/14-04/tosca/Dockerfile
@@ -11,3 +11,17 @@ RUN apt-get update && apt-get install -y \
     python-testscenarios \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
+
+# Clone the tosca-parser project
+RUN git clone https://github.com/indigo-dc/tosca-parser
+
+# Prepare the test environment (Remove unnecesary tests)
+RUN cd tosca-parser \
+ && mv toscaparser/tests/test_indigo.py . \
+ && rm toscaparser/tests/test_* \
+ && mv test_indigo.py toscaparser/tests/ \
+ && rm toscaparser/extensions/nfv/tests/test_tosca_nfv_tpl.py
+
+
+
+
