--- a/docker/ubuntu/14-04/python/Dockerfile
+++ b/docker/ubuntu/14-04/python/Dockerfile
@@ -1,10 +1,9 @@
-FROM grycap/jenkins:ubuntu14.04-base
+FROM grycap/jenkins:ubuntu14.04-git
 LABEL description="Container with python 2.7 and python test libraries"
 MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 
 # Update and install all the necessary packages
 RUN apt-get update && apt-get install -y \
-    git \
     python2.7 \
     python-nose \
     python-mock \
