--- a/docker/ubuntu/14-04/tosca/Dockerfile
+++ b/docker/ubuntu/14-04/tosca/Dockerfile
@@ -21,3 +21,6 @@ RUN cd tosca-parser \
  && rm toscaparser/tests/test_* \
  && mv test_indigo.py toscaparser/tests/ \
  && rm toscaparser/extensions/nfv/tests/test_tosca_nfv_tpl.py
+ 
+# Create the folder where the tests will be executed
+RUN mkdir -p /tosca-parser/toscaparser/tests/data/indigo/examples
