Update tosca dockerfile
Clone tosca-parser repo in jenkins home

--- a/docker/ubuntu/14-04/tosca/Dockerfile
+++ b/docker/ubuntu/14-04/tosca/Dockerfile
@@ -1,5 +1,5 @@
 FROM grycap/jenkins:ubuntu14.04-python
-LABEL description="Container with the python libraries needed to test tosca templates"
+LABEL description="Container with the dependencies needed to test tosca templates"
 MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 
 # Update and install all the necessary packages
@@ -15,14 +15,14 @@ RUN apt-get update && apt-get install -y \
 USER jenkins
 
 # Clone the tosca-parser project
-RUN git clone https://github.com/indigo-dc/tosca-parser
+RUN git clone https://github.com/indigo-dc/tosca-parser ~/tosca-parser
 
 # Prepare the test environment (Remove unnecesary tests)
-RUN cd tosca-parser \
+RUN cd ~/tosca-parser \
  && mv toscaparser/tests/test_indigo.py . \
  && rm toscaparser/tests/test_* \
  && mv test_indigo.py toscaparser/tests/ \
  && rm toscaparser/extensions/nfv/tests/test_tosca_nfv_tpl.py
  
 # Create the folder where the tests will be executed
-RUN mkdir -p /tosca-parser/toscaparser/tests/data/indigo/examples
+RUN mkdir -p ~/tosca-parser/toscaparser/tests/data/indigo/examples
