--- a/docker/ubuntu/14-04/ec3/Dockerfile
+++ b/docker/ubuntu/14-04/ec3/Dockerfile
@@ -1,6 +1,6 @@
-# Dockerfile to create a container with the IM service
+# Dockerfile to create a container with the EC3 service
 FROM ubuntu:14.04
-MAINTAINER Germán Moltó <gmolto@dsic.upv.es>
+MAINTAINER Amanda Calatrava <amcaar#i3m.upv.es>
 LABEL version="1.0"
 LABEL description="Elastic Cloud Computing Cluster (EC3) - http://www.grycap.upv.es/ec3"
 RUN apt-get update && apt-get install -y \
@@ -14,3 +14,4 @@ ENV EC3_HOME /opt/ec3
 RUN mkdir -p "$EC3_HOME"
 WORKDIR $EC3_HOME
 RUN git clone https://github.com/grycap/ec3.git $EC3_HOME
+COPY nmap_test.sh /opt/nmap_test.sh
