--- a/docker/ubuntu/14-04/ec3/Dockerfile
+++ b/docker/ubuntu/14-04/ec3/Dockerfile
@@ -5,12 +5,20 @@ LABEL version="1.0"
 LABEL description="Elastic Cloud Computing Cluster (EC3) - http://www.grycap.upv.es/ec3"
 RUN apt-get update && apt-get install -y \
     nmap \
+    wget \
     python-ply \
     python-dev \
-    python-yaml
+    python-yaml \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/*
 
 ENV EC3_HOME /opt/ec3
 RUN mkdir -p "$EC3_HOME"
 WORKDIR $EC3_HOME
 RUN git clone https://github.com/grycap/ec3.git $EC3_HOME
 COPY nmap_test.sh /opt/nmap_test.sh
+
+# Set jenkins user as owner of the ec3 app
+RUN sudo chown -R 1001:1001 /opt/
+USER jenkins
+RUN chmod +x /opt/nmap_test.sh
