Update tosca dockerfile

--- a/docker/ubuntu/14-04/tosca/Dockerfile
+++ b/docker/ubuntu/14-04/tosca/Dockerfile
@@ -12,17 +12,18 @@ RUN apt-get update && apt-get install -y \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
-USER jenkins
-
 # Clone the tosca-parser project
-RUN git clone https://github.com/indigo-dc/tosca-parser ~/tosca-parser
+RUN git clone https://github.com/indigo-dc/tosca-parser /opt/tosca-parser
 
 # Prepare the test environment (Remove unnecesary tests)
-RUN cd ~/tosca-parser \
+RUN cd /opt/tosca-parser \
  && mv toscaparser/tests/test_indigo.py . \
  && rm toscaparser/tests/test_* \
  && mv test_indigo.py toscaparser/tests/ \
  && rm toscaparser/extensions/nfv/tests/test_tosca_nfv_tpl.py
  
 # Create the folder where the tests will be executed
-RUN mkdir -p ~/tosca-parser/toscaparser/tests/data/indigo/examples
+RUN mkdir -p /opt/tosca-parser/toscaparser/tests/data/indigo/examples
+
+# Give ownership to the jenkins user
+RUN chown -R jenkins:jenkins /opt/tosca-parser
