--- a/docker/ubuntu/14-04/base/Dockerfile
+++ b/docker/ubuntu/14-04/base/Dockerfile
@@ -2,6 +2,12 @@ FROM ubuntu:14.04
 LABEL description="Base container image with the jenkins user configured"
 MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 
+# Update and install all the necessary packages
+RUN apt-get update && apt-get install -y \
+    curl \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/*
+
 # Add jenkins user/group
 RUN groupadd -g 1001 jenkins \
  && useradd -m -d /home/jenkins -s /bin/bash -g jenkins -u 1001 jenkins
