--- a/docker/ubuntu/14-04/vnc/Dockerfile
+++ b/docker/ubuntu/14-04/vnc/Dockerfile
@@ -10,18 +10,21 @@ RUN apt-get update && apt-get install -y \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
-# Create vnc folders and files
-RUN mkdir ~/.vnc \
- && touch ~/.vnc/passwd \
- && x11vnc -storepasswd "fakepwd123" ~/.vnc/passwd
-
 # Install firefox-ESR
 RUN wget https://download-installer.cdn.mozilla.net/pub/firefox/releases/45.2.0esr/linux-x86_64/en-US/firefox-45.2.0esr.tar.bz2 \
  && tar -xvjf firefox-45.2.0esr.tar.bz2 -C /opt \
  && mv /usr/bin/firefox /usr/bin/firefox-old \
  && sudo ln -s /opt/firefox/firefox /usr/bin/firefox
 
+# Create vnc folders and files
+USER jenkins
+RUN mkdir ~/.vnc \
+ && touch ~/.vnc/passwd \
+ && x11vnc -storepasswd "fakepwd123" ~/.vnc/passwd
+USER root
+
 # Start vnc display when the container is launched
 ADD start_vnc.sh /start_vnc.sh
 RUN chmod +x /start_vnc.sh
-CMD ["/start_vnc.sh"]
+ENV DISPLAY :10
+CMD ["/start_vnc.sh"] 
