--- a/docker/ubuntu/14-04/vnc/Dockerfile
+++ b/docker/ubuntu/14-04/vnc/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get install -y \
 RUN wget https://download-installer.cdn.mozilla.net/pub/firefox/releases/45.2.0esr/linux-x86_64/en-US/firefox-45.2.0esr.tar.bz2 \
  && tar -xvjf firefox-45.2.0esr.tar.bz2 -C /opt \
  && mv /usr/bin/firefox /usr/bin/firefox-old \
- && sudo ln -s /opt/firefox/firefox /usr/bin/firefox
+ && sudo ln -s /opt/firefox/firefox /usr/bin/firefox \
  && rm /firefox-45.2.0esr.tar.bz2
 
 # Create vnc folders and files
