--- a/docker/ubuntu/14-04/base/Dockerfile
+++ b/docker/ubuntu/14-04/base/Dockerfile
@@ -5,6 +5,7 @@ MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 # Update and install all the necessary packages
 RUN apt-get update && apt-get install -y \
     curl \
+    httpie \    
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
