--- a/docker/alpine/im/Dockerfile
+++ b/docker/alpine/im/Dockerfile
@@ -18,9 +18,9 @@ RUN apk add \
 RUN pip install scp apache-libcloud soappy mock bottle nose-timer
 
 # Install RADL lib
-RUN git clone https://github.com/grycap/RADL /home/jenkins/RADL
- && cd /home/jenkins/RADL
- && python setup.py install
- && rm /usr/lib/python2.7/site-packages/RADL-1.0.2-py2.7.egg
- && mkdir -p /usr/lib/python2.7/site-packages/RADL-1.0.2-py2.7.egg
+RUN git clone https://github.com/grycap/RADL /home/jenkins/RADL \
+ && cd /home/jenkins/RADL \
+ && python setup.py install \
+ && rm /usr/lib/python2.7/site-packages/RADL-1.0.2-py2.7.egg \
+ && mkdir -p /usr/lib/python2.7/site-packages/RADL-1.0.2-py2.7.egg \
  && mv * /usr/lib/python2.7/site-packages/RADL-1.0.2-py2.7.egg/
