Reduce layers of the alpine images

--- a/docker/alpine/im/Dockerfile
+++ b/docker/alpine/im/Dockerfile
@@ -2,19 +2,21 @@ FROM grycap/jenkins:docker
 LABEL description="Container to launch im tests"
 MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 
+# Add testing repository
+RUN echo "@testing http://nl.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories
+
 # Update and install all the necessary packages
-RUN apk add \
-  pep8 \
+RUN apk add --no-cache \
   py-nose \
-  py-coverage \
   py-boto \
   gcc \
   py-pip \
-  py-netaddr \
   ansible \
   procps \
   jq \
-  --update-cache --repository http://dl-3.alpinelinux.org/alpine/edge/testing/ --allow-untrusted
+  pep8@testing \
+  py-coverage@testing \
+  py-netaddr@community
 
 RUN pip install scp apache-libcloud soappy mock bottle nose-timer
 
@@ -27,7 +29,7 @@ RUN git clone https://github.com/grycap/RADL /home/jenkins/RADL \
  && mv * /usr/lib/python2.7/site-packages/RADL-1.0.2-py2.7.egg/
 
 # Install tosca-parser
-RUN cd tmp \
+RUN cd /tmp \
  && git clone --recursive https://github.com/indigo-dc/tosca-parser.git \
  && cd tosca-parser \
  && pip install /tmp/tosca-parser
