--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,22 +2,21 @@ FROM docker:git
 LABEL description="Container to build and run docker images (not dind)"
 MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 
+# Add community repository
+RUN echo "@community http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
+
 # Update and install all the necessary packages
-RUN apk update && apk upgrade && apk add \
+RUN apk add --no-cache \
     sudo \
     curl \
     wget \
-    bash
-
-RUN echo "@community http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
-
-RUN apk -U add shadow@community
+    bash \
+    shadow@community
 
 # Add jenkins user/group
 RUN groupadd -g 1001 jenkins \
  && useradd -m -d /home/jenkins -s /bin/bash -g jenkins -u 1001 jenkins
-
-RUN gpasswd -a jenkins wheel
+ && gpasswd -a jenkins wheel
 
 # Enable passwordless sudo for users under the "wheel" group
 RUN sed -i.bkp -e 's/#\s%wheel.*NOPASSWD.*/%wheel ALL=(ALL) NOPASSWD: ALL/g' /etc/sudoers
