Update clues-indigo-ec3 parent image

--- a/docker/ubuntu/14-04/clues-indigo-ec3/Dockerfile
+++ b/docker/ubuntu/14-04/clues-indigo-ec3/Dockerfile
@@ -1,5 +1,4 @@
-# Dockerfile to create a container with the EC3 service
-FROM grycap/jenkins:ubuntu14.04-ec3
+FROM grycap/jenkins:ec3
 LABEL description="Container used in the clues-indigo integration testing"
 MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 
@@ -7,7 +6,7 @@ MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 RUN apt-get update && apt-get install -y \
     ssh \
     sshpass \
-    jq \    
+    jq \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
