--- a/config-scripts/ec3/ports/Jenkinsfile
+++ b/config-scripts/ec3/ports/Jenkinsfile
@@ -9,7 +9,7 @@ node('docker'){
         'swarm'
     ]
 
-    docker.image('grycap/jenkins:ubuntu14.04-ec3').inside {
+    docker.image('grycap/jenkins:ec3').inside {
 
         stage 'Prepare environment'
         env.github = 'https://raw.githubusercontent.com/grycap/jenkins/master/config-scripts/ec3'
