--- a/docker/ubuntu/14-04/ec3/Dockerfile
+++ b/docker/ubuntu/14-04/ec3/Dockerfile
@@ -19,4 +19,4 @@ WORKDIR $EC3_HOME
 RUN git clone https://github.com/grycap/ec3.git $EC3_HOME
 
 # Set jenkins user as owner of the ec3 app
-RUN sudo chown -R 1001:1001 /opt/
+RUN sudo chown -R 1001:1001 /opt/ec3
