--- a/docker/ubuntu/14-04/im/Dockerfile
+++ b/docker/ubuntu/14-04/im/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     python-pip \
     python-soappy \
     python-dateutil \
+    python-mysqldb \
     openssh-client \
     sshpass \
     git \
