--- a/docker/alpine/im/Dockerfile
+++ b/docker/alpine/im/Dockerfile
@@ -17,6 +17,7 @@ RUN apk add --no-cache \
   jq \
   py-pep8 \
   python-dev \
+  musl-dev \
   py-coverage@testing
 
 RUN pip install scp netaddr apache-libcloud mock bottle nose-timer suds azure-mgmt-storage azure-mgmt-compute azure-mgmt-network azure-mgmt-resource
