--- a/docker/alpine/im/Dockerfile
+++ b/docker/alpine/im/Dockerfile
@@ -19,6 +19,7 @@ RUN apk add --no-cache \
   python-dev \
   musl-dev \
   libffi-dev \
+  openssl-dev \
   py-coverage@testing
 
 RUN pip install scp netaddr apache-libcloud mock bottle nose-timer suds azure-mgmt-storage azure-mgmt-compute azure-mgmt-network azure-mgmt-resource
