Add sudo to ubuntu 16.04 base

--- a/docker/ubuntu/16-04/base/Dockerfile
+++ b/docker/ubuntu/16-04/base/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Alfonso Pérez (alpegon3@upv.es)
 
 # Update and install all the necessary packages
 RUN apt-get update && apt-get install -y \
+    sudo \
     wget \
     curl \
     httpie \
