Put version < 9 off cherrypy

--- a/docker/ubuntu/16-04/im/Dockerfile
+++ b/docker/ubuntu/16-04/im/Dockerfile
@@ -20,4 +20,6 @@ RUN apt-get update && apt-get install -y \
 
 # Install CherryPy to enable HTTPS in REST API
 RUN pip install setuptools --upgrade -I
-RUN pip install pbr CherryPy pyOpenSSL --upgrade -I
+RUN pip install pbr pyOpenSSL --upgrade -I
+# Put version < 9 off cherrypy
+RUN pip install CherryPy==8.9.1 --upgrade -I
