--- a/docker/ubuntu/16-04/base/Dockerfile
+++ b/docker/ubuntu/16-04/base/Dockerfile
@@ -8,7 +8,8 @@ RUN apt-get update && apt-get install -y \
     wget \
     curl \
     httpie \
-    software-properties-common \    
+    software-properties-common \
+    vim \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
