--- a/docker/ubuntu/16-04/im/Dockerfile
+++ b/docker/ubuntu/16-04/im/Dockerfile
@@ -22,3 +22,4 @@ RUN apt-get update && apt-get install -y \
 RUN pip install setuptools --upgrade -I
 RUN pip install pbr pyOpenSSL --upgrade -I
 RUN pip install cheroot
+RUN pip install pywinrm
