Install RADL from git master branch

--- a/docker/ubuntu/16-04/im-py3/Dockerfile
+++ b/docker/ubuntu/16-04/im-py3/Dockerfile
@@ -30,10 +30,15 @@ RUN apt-get update && apt-get install -y \
 RUN pip3 install setuptools --upgrade -I
 RUN pip3 install pbr pyOpenSSL --upgrade -I
 RUN pip3 install cheroot
-RUN pip3 install RADL
 RUN pip3 install msrest msrestazure azure-common azure-mgmt-storage azure-mgmt-compute azure-mgmt-network azure-mgmt-resource
 RUN pip3 install apache-libcloud
 RUN pip3 install ansible
 RUN pip3 install PyMySQL
 RUN pip3 install pywinrm
 RUN pip3 install tosca-parser
+
+# Install RADL master branch
+RUN cd /tmp \
+ && git clone https://github.com/grycap/RADL  \
+ && cd RADL \
+ && pip install /tmp/RADL
