--- a/config-scripts/onedock/Jenkinsfile
+++ b/config-scripts/onedock/Jenkinsfile
@@ -22,7 +22,7 @@ node('lxc') {
         sh 'curl -s $TEST_REPO_PATH/functional-tests/003-onevnet-test.sh | bash'
 
         stage 'Onehost test'
-        sh 'curl -s $TEST_REPO_PATH/functional-tests/004-one4host-test | bash'
+        sh 'curl -s $TEST_REPO_PATH/functional-tests/004-one4host-test.sh | bash'
 
         stage 'Onevm test 1'
         sh 'curl -s $TEST_REPO_PATH/functional-tests/005-onevm-test.sh | bash'
