--- a/config-scripts/onedock/Jenkinsfile
+++ b/config-scripts/onedock/Jenkinsfile
@@ -13,22 +13,22 @@ node('lxc') {
         sh 'curl -s $TEST_REPO_PATH/create-lxc-container.sh | bash -s create-lxc one4test'
 
         stage 'Onedatastore test'
-        sh 'curl -s $TEST_REPO_PATH/functional-tests/001-onedatastore-test.sh | bash'
+        sh 'curl -s $TEST_REPO_PATH/functional-tests/001-onedatastore-test.sh | bash -s one4test'
 
         stage 'Oneimage test'
-        sh 'curl -s $TEST_REPO_PATH/functional-tests/002-oneimage-test.sh | bash'
+        sh 'curl -s $TEST_REPO_PATH/functional-tests/002-oneimage-test.sh | bash -s one4test'
 
         stage 'Onevnet test'
-        sh 'curl -s $TEST_REPO_PATH/functional-tests/003-onevnet-test.sh | bash'
+        sh 'curl -s $TEST_REPO_PATH/functional-tests/003-onevnet-test.sh | bash -s one4test'
 
         stage 'Onehost test'
-        sh 'curl -s $TEST_REPO_PATH/functional-tests/004-one4host-test.sh | bash'
+        sh 'curl -s $TEST_REPO_PATH/functional-tests/004-one4host-test.sh | bash -s one4test'
 
         stage 'Onevm test 1'
-        sh 'curl -s $TEST_REPO_PATH/functional-tests/005-onevm-test.sh | bash'
+        sh 'curl -s $TEST_REPO_PATH/functional-tests/005-onevm-test.sh | bash -s one4test'
 
         stage 'Onevm test 2'
-        sh 'curl -s $TEST_REPO_PATH/functional-tests/006-onevm-test.sh | bash'
+        sh 'curl -s $TEST_REPO_PATH/functional-tests/006-onevm-test.sh | bash -s one4test'
 
         stage 'Destroy existing containers'
         sh 'curl -s $TEST_REPO_PATH/stop-destroy-existing-containers.sh | bash -s one4test'
