--- a/docker/debian/9/base/Dockerfile
+++ b/docker/debian/9/base/Dockerfile
@@ -7,9 +7,7 @@ RUN apt-get update && apt-get install -y \
     sudo \
     wget \
     curl \
-    httpie \
- && apt-get clean \
- && rm -rf /var/lib/apt/lists/*
+    httpie
 
 # Add jenkins user/group
 RUN groupadd -g 1001 jenkins \
