--- a/docker/ubuntu/16-04/im-py3/Dockerfile
+++ b/docker/ubuntu/16-04/im-py3/Dockerfile
@@ -30,7 +30,7 @@ RUN apt-get update && apt-get install -y \
 RUN su jenkins && pip3 install setuptools --upgrade -I
 RUN su jenkins && pip3 install pbr pyOpenSSL --upgrade -I
 RUN su jenkins && pip3 install cheroot
-RUN su jenkins && pip3 install msrest msrestazure azure-common azure-mgmt-storage azure-mgmt-compute azure-mgmt-network azure-mgmt-resource azure-mgmt-dns 
+RUN su jenkins && pip3 install msrest msrestazure azure-common azure-mgmt-storage azure-mgmt-compute azure-mgmt-network azure-mgmt-resource azure-mgmt-dns azure-storage
 RUN su jenkins && pip3 install apache-libcloud
 RUN su jenkins && pip3 install ansible
 RUN su jenkins && pip3 install PyMySQL
