--- a/docker/ubuntu/14-04/pyinstaller/Dockerfile
+++ b/docker/ubuntu/14-04/pyinstaller/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:14.04
+FROM grycap/jenkins:ubuntu14.04-git
 
 RUN apt update && apt install -y python3 python3-pip
 RUN pip3 install boto3 botocore pyinstaller
