--- a/docker/ubuntu/14-04/tosca/Dockerfile
+++ b/docker/ubuntu/14-04/tosca/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     python-dateutil \
     python-fixtures \
     python-testscenarios \
+    python-dev \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
